updated yaml file for CI build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,17 +16,12 @@ before_script:
 
 build:
   stage: build
-  # instead of calling g++ directly you can also use some build toolkit like make
-  # install the necessary build tools when needed
   script:
     - ./scripts/build.sh
-  # cache:
-  #   paths:
-  #     - "*.o"
 
 release-job:
-  # script:
-  #   - build for release
+  script:
+    - ./scripts/build.sh
   artifacts:
     paths:
       - .
