--- a/Example04-CustomToolTrajectory/Example04-CustomToolTrajectory.csproj
+++ b/Example04-CustomToolTrajectory/Example04-CustomToolTrajectory.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mono.Options\Options.cs" />
+    <Compile Include="Applications\CustomToolTrajectory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -72,5 +73,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Mono.Options\" />
+    <Folder Include="Applications\" />
   </ItemGroup>
 </Project>
