--- a/Example01-Console/Example01-Console.csproj
+++ b/Example01-Console/Example01-Console.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>Example01Console</RootNamespace>
     <AssemblyName>Example01-Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
