creating a new project and adding relevant files from feature/spring-example

--- a/Example06-Spring/Example06-Spring.csproj
+++ b/Example06-Spring/Example06-Spring.csproj
@@ -67,6 +67,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Applications\Spring.cs" />
+    <Compile Include="Mono.Options\Options.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Mono.Options\" />
+  </ItemGroup>
 </Project>
