--- a/Example05-DisplayBasicInfo/Example05-DisplayBasicInfo.csproj
+++ b/Example05-DisplayBasicInfo/Example05-DisplayBasicInfo.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>Example05DisplayBasicInfo</RootNamespace>
     <AssemblyName>Example05-DisplayBasicInfo</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
