--- a/Example06-Spring/Example06-Spring.csproj
+++ b/Example06-Spring/Example06-Spring.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>Example06Spring</RootNamespace>
     <AssemblyName>Example06-Spring</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
