--- a/Example04-DisplayBasicInfo/Example04-DisplayBasicInfo.csproj
+++ b/Example04-DisplayBasicInfo/Example04-DisplayBasicInfo.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A6E1BC8A-6F6E-4047-A5E9-70D55DA78255}</ProjectGuid>
+    <ProjectGuid>{2541E528-2853-4393-A6FD-BBF575D70C97}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Example04CustomToolTrajectory</RootNamespace>
-    <AssemblyName>Example04-CustomToolTrajectory</AssemblyName>
+    <RootNamespace>Example05DisplayBasicInfo</RootNamespace>
+    <AssemblyName>Example04-DisplayBasicInfo</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
@@ -36,7 +36,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mono.Options\Options.cs" />
-    <Compile Include="Applications\CustomToolTrajectory.cs" />
+    <Compile Include="Applications\DisplayBasicInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -64,13 +64,13 @@
     <Reference Include="RSG.Promise">
       <HintPath>..\dll\RSG.Promise.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
       <HintPath>..\dll\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Mono.Options\" />
