--- a/Example05-SimpleMove/Example05-SimpleMove.csproj
+++ b/Example05-SimpleMove/Example05-SimpleMove.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2541E528-2853-4393-A6FD-BBF575D70C97}</ProjectGuid>
+    <ProjectGuid>{530BE6FE-4F43-4CF1-80AF-8B57F7F1B461}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Example05DisplayBasicInfo</RootNamespace>
-    <AssemblyName>Example05-DisplayBasicInfo</AssemblyName>
+    <RootNamespace>Example03SimpleMove</RootNamespace>
+    <AssemblyName>Example05-SimpleMove</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
@@ -33,13 +33,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Mono.Options\Options.cs" />
-    <Compile Include="Applications\DisplayBasicInfo.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="coapsharp">
       <HintPath>..\dll\coapsharp.dll</HintPath>
     </Reference>
@@ -58,20 +52,26 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\dll\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="ProficioClient">
-      <HintPath>..\dll\ProficioClient.dll</HintPath>
-    </Reference>
-    <Reference Include="RSG.Promise">
-      <HintPath>..\dll\RSG.Promise.dll</HintPath>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
       <HintPath>..\dll\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="RSG.Promise">
+      <HintPath>..\dll\RSG.Promise.dll</HintPath>
+    </Reference>
+    <Reference Include="ProficioClient">
+      <HintPath>..\dll\ProficioClient.dll</HintPath>
+    </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Mono.Options\Options.cs" />
+    <Compile Include="Applications\SimpleMove.cs" />
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Mono.Options\" />
     <Folder Include="Applications\" />
