--- a/Example06a-CustomToolTrajectory/Example06a-CustomToolTrajectory.csproj
+++ b/Example06a-CustomToolTrajectory/Example06a-CustomToolTrajectory.csproj
@@ -7,8 +7,8 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{A6E1BC8A-6F6E-4047-A5E9-70D55DA78255}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Example04CustomToolTrajectory</RootNamespace>
-    <AssemblyName>Example06-CustomToolTrajectory</AssemblyName>
+    <RootNamespace>BurtSharp.Examples</RootNamespace>
+    <AssemblyName>Example06a-CustomToolTrajectory</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
