--- a/Example03-HoldPosition/Example03-HoldPosition.csproj
+++ b/Example03-HoldPosition/Example03-HoldPosition.csproj
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{EFD9DDED-4CB3-41AB-8C99-0F705531B560}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Example02HoldPosition</RootNamespace>
+    <RootNamespace>BurtSharp.Examples</RootNamespace>
     <AssemblyName>Example03-HoldPosition</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <ReleaseVersion>0.2</ReleaseVersion>
